experimenting with the look of showcase component css

--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -1,7 +1,11 @@
 .showcase-container {
-    height: 301px;
-    width: 435px;
+    height: 400px;
+    width: 525px;
     background-color: black;
     color: white;
     text-align: center;
+}
+
+img {
+    width: 75%;
 }
