--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -1,11 +1,13 @@
 .showcase-container {
-    height: 400px;
-    width: 525px;
-    background-color: black;
-    color: white;
+    height: 500px;
+    width: 615px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-align: center;
+    margin-top: 25px;
+    border: solid 2px black;
 }
 
 img {
-    width: 75%;
+    width: 90%;
 }
