edit hero css to fit the whole screen more instead of seeing other content at the same time

--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -6,10 +6,11 @@
     justify-content: center;
     color: #444444;
     font-weight: 300;
+    height: 800px;
 }
 
 .hero-img {
-    width: 345px;
+    width: 450px;
     margin-top: 25px;
     border: solid 2px black;
     border-radius: 50%;
@@ -35,9 +36,9 @@
 }
 
 .hero-text p {
-    font-size: 30px;
+    font-size: 32px;
 }
 
 .hero-text h2 {
-    font-size: 40px;
+    font-size: 70px;
 }
