--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -6,7 +6,7 @@
     justify-content: center;
     color: #444444;
     font-weight: 300;
-    height: 800px;
+    height: 850px;
 }
 
 .hero-img {
@@ -28,6 +28,7 @@
 .hero-img-container p {
     margin-top: 10px;
     font-size: 50px;
+    color: black;
 }
 
 .hero-text {
@@ -41,4 +42,12 @@
 
 .hero-text h2 {
     font-size: 70px;
+}
+
+.hero-text .complex {
+    color: #c95243;
+}
+
+.hero-text .simple {
+    color: #44A1A0;
 }
