global style changes, including the margin, padding, box-sizing, and changing the display to flex for everything

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&family=Raleway:wght@200;300;400;500;600;700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  margin-left: 187px;
-  margin-right: 187px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #ffffff;
   color: #444444;
+  display: flex;
+  flex-direction: column;
 }
 
 code {
