--- a/src/css/About.css
+++ b/src/css/About.css
@@ -4,18 +4,20 @@
     align-items: center;
     flex-direction: column;
     background-color: #44A1A0;
-    height: 800px;
     color: white;
-    padding-left: 20%;
-    padding-right: 20%;
+    width: 100%;
+    margin-bottom: 1.5em;
 }
 
 .about-container h3 {
-    font-size: 60px;
+    font-size: 1.75rem;
+    margin-bottom: .5em;
 }
 
 .about-container p {
-    font-size: 40px;
+    font-size: 1rem;
     text-align: center;
     font-weight: 300;
+    max-width: 450px;
+    line-height: 1.75em;
 }
