--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,26 +1,26 @@
+.navbar-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
 .navLinks {
+    display: flex;
     list-style: none;
 }
 
 .navLinks li,
-a {
-    display: inline-block;
-    padding: 0px 20px;
+.navLinks a {
     color: black;
     text-decoration: none;
+    font-size: 1.25rem;
+    margin: 0 1em;
 }
 
-.navLinks a:hover {
-    text-decoration: underline;
-}
-
-.navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-}
-
-.nav-logo {
-    width: 100px;
+.navLinks a {
+    display: block;
+    width: 100%;
+    margin: .5em 0;
 }
