various css changes for a mobile-first approach

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,4 +3,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-top: 1em;
+}
+
+.portfolio-container h2 {
+    font-size: 2rem;
 }
