--- a/src/css/About.css
+++ b/src/css/About.css
@@ -6,15 +6,16 @@
     background-color: #44A1A0;
     color: white;
     width: 100%;
-    margin-bottom: 1.5em;
+    padding: 1em 1.5em 1.5em;
 }
 
-.about-container h3 {
+h3 {
     font-size: 1.75rem;
-    margin-bottom: .5em;
+    margin-bottom: .2em;
 }
 
-.about-container p {
+p {
+    padding: 0;
     font-size: 1rem;
     text-align: center;
     font-weight: 300;
