--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -4,5 +4,6 @@
     align-items: center;
     background-color: #333;
     color: white;
-    height: 5rem;
+    height: 4rem;
+    margin-top: 4em;
 }
