--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -13,7 +13,7 @@
     margin-top: 25px;
     border: solid 2px black;
     border-radius: 50%;
-    width: 35%;
+    width: 50%;
 }
 
 .hero-img-container {
@@ -38,10 +38,18 @@
     font-size: 1rem;
     max-width: 450px;
     line-height: 1.75em;
+    margin-bottom: 1em;
+    padding: 1em;
+}
+
+h1 {
+    font-size: 2.3rem;
+    margin-bottom: .3em;
 }
 
 .hero-text h2 {
     font-size: 1rem;
+    padding: 0 1em;
 }
 
 .hero-text .complex {
