--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -4,13 +4,26 @@
     color: rgb(0, 0, 0);
     margin: 1em 0;
     text-align: center;
-    border: solid 2px black;
 }
 
 img {
     width: 80%;
 }
 
-p {
-    font-size: 18px;
+.showcase-container p {
+    font-size: .8rem;
+}
+
+.projectLink {
+    display: flex;
+    font-size: .7rem;
+    background-color: rgb(94, 17, 109);
+    color: white;
+    width: 50%;
+    margin: 1em auto 0;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    text-decoration: none;
+    font-weight: bold;
 }
