--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -24,7 +24,7 @@ li,
     align-items: center;
     color: black;
     text-decoration: none;
-    font-size: .85rem;
+    font-size: 1rem;
 }
 
 .navLinks a {
