--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
 .portfolio-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 1em;
@@ -8,4 +8,6 @@
 
 .portfolio-container h2 {
     font-size: 2rem;
+    text-align: center;
+    margin-bottom: .5em;
 }
