--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -1,9 +1,12 @@
 .showcase-container {
-    width: 30rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     margin: 1em 0;
-    text-align: center;
 }
 
 img {
@@ -11,19 +14,25 @@ img {
 }
 
 .showcase-container p {
-    font-size: .8rem;
+    padding: 1em;
+    font-size: 1rem;
+}
+
+.showcase-container h3 {
+    font-size: 1.5rem;
 }
 
 .projectLink {
     display: flex;
-    font-size: .7rem;
+    font-size: .8rem;
     background-color: rgb(94, 17, 109);
     color: white;
-    width: 50%;
-    margin: 1em auto 0;
+    width: 40%;
+    margin: 0 auto 1em;
     align-items: center;
     justify-content: center;
-    height: 30px;
+    height: 35px;
     text-decoration: none;
     font-weight: bold;
+    border-radius: 5px;
 }
