--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -32,7 +32,10 @@
 }
 
 .hero-text {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero-text p {
@@ -46,10 +49,11 @@
 h1 {
     font-size: 3.2rem;
     margin-bottom: .3em;
+
 }
 
 .hero-text h2 {
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding: 0 1em;
 }
 
