--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -25,7 +25,7 @@ img {
 
 .projectLink {
     display: flex;
-    font-size: .8rem;
+    font-size: .9rem;
     background-color: rgb(94, 17, 109);
     color: white;
     width: 40%;
@@ -36,4 +36,5 @@ img {
     text-decoration: none;
     font-weight: bold;
     border-radius: 5px;
+    text-transform: uppercase;
 }
