--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -47,11 +47,9 @@
 }
 
 h1 {
-    font-size: 3rem;
-    margin-bottom: .3em;
+    font-size: 3.3rem;
     margin-left: .5em;
     margin-right: .5em;
-
 }
 
 .hero-text h2 {
@@ -65,4 +63,11 @@ h1 {
 
 .hero-text .simple {
     color: #44A1A0;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-bottom: 4em;
 }
