--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -21,6 +21,7 @@ img {
 
 .showcase-container h3 {
     font-size: 1.5rem;
+    margin-bottom: .8em;
 }
 
 .projectLink {
@@ -29,7 +30,7 @@ img {
     background-color: rgb(94, 17, 109);
     color: white;
     width: 40%;
-    margin: 0 auto 1em;
+    margin: 0 auto 2em;
     align-items: center;
     justify-content: center;
     height: 35px;
