--- a/src/css/About.css
+++ b/src/css/About.css
@@ -14,9 +14,9 @@ h3 {
     margin-bottom: .2em;
 }
 
-p {
+.about-container p {
     padding: .8em;
-    font-size: 1rem;
+    font-size: 1.2rem;
     text-align: center;
     font-weight: 300;
     max-width: 450px;
