--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,9 @@
 }
 
 .portfolio-container h2 {
-    font-size: 2rem;
+    font-size: 2.2rem;
     text-align: center;
+    margin-top: 1em;
     margin-bottom: .5em;
+    font-weight: bold;
 }
