--- a/src/css/About.css
+++ b/src/css/About.css
@@ -3,8 +3,8 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    background-color: #44A1A0;
-    color: white;
+    background-color: #444444;
+    color: rgb(255, 255, 255);
     width: 100%;
     padding: 1em 1.5em 1.5em;
 }
