--- a/src/css/About.css
+++ b/src/css/About.css
@@ -6,7 +6,7 @@
     background-color: #444444;
     color: rgb(255, 255, 255);
     width: 100%;
-    padding: 1em 1.5em 1.5em;
+    padding: 3em 1.5em;
 }
 
 h2 {
