--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -11,6 +11,7 @@
 
 .hero-img {
     margin-top: 25px;
+    margin-bottom: 0;
     border: solid 2px black;
     border-radius: 50%;
     width: 50%;
@@ -26,7 +27,6 @@
 }
 
 .hero-img-container p {
-    margin-top: 10px;
     font-size: 50px;
     color: black;
 }
@@ -36,6 +36,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 0;
 }
 
 .hero-text p {
@@ -43,7 +44,7 @@
     max-width: 450px;
     line-height: 1.75em;
     margin-bottom: 1em;
-    padding: 1em;
+    padding: 0 1em;
 }
 
 h1 {
