--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -48,6 +48,9 @@
 }
 
 h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 3.3rem;
     margin-left: .5em;
     margin-right: .5em;
