--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -24,6 +24,7 @@ img {
 .showcase-container h3 {
     font-size: 1.8rem;
     margin-bottom: .8em;
+    text-align: center;
     color: #444444;
 }
 
@@ -36,6 +37,7 @@ img {
     margin: 0 auto 2em;
     align-items: center;
     justify-content: center;
+    text-align: center;
     height: 35px;
     text-decoration: none;
     font-weight: bold;
