--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -34,6 +34,7 @@ img {
     background-color: rgb(0, 12, 116);
     color: white;
     width: 40%;
+    max-width: 200px;
     margin: 0 auto 2em;
     align-items: center;
     justify-content: center;
