--- a/src/css/About.css
+++ b/src/css/About.css
@@ -23,3 +23,14 @@ h2 {
     max-width: 450px;
     line-height: 1.75em;
 }
+
+@media (min-width: 1000px) {
+    .about-container {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .about-container h2 {
+        font-size: 4rem;
+    }
+}
