--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,6 @@
 .portfolio-container {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 1em;
 }
@@ -12,4 +11,11 @@
     margin-top: 1em;
     margin-bottom: .5em;
     font-weight: bold;
+}
+
+@media (min-width: 800px) {
+    .portfolio-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
