--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,9 +8,12 @@
 .portfolio-container h2 {
     font-size: 2.2rem;
     text-align: center;
-    margin-top: 1em;
     margin-bottom: .5em;
     font-weight: bold;
+}
+
+.projects {
+    margin-top: 1em;
 }
 
 @media (min-width: 800px) {
