--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -4,10 +4,20 @@
     align-items: center;
     background-color: #333;
     color: white;
-    height: 4rem;
+    height: 6em;
     margin-top: 4em;
 }
 
+.footer-socials {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
 .fa-github {
+    color: white;
+}
+
+.fa-linkedin {
     color: white;
 }
