--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(0, 0, 0);
     height: 60px;
 }
 
@@ -23,7 +23,7 @@ li,
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 1rem;
 }
@@ -41,6 +41,6 @@ li,
 .logo {
     font-size: 1.5rem;
     text-decoration: none;
-    color: black;
+    color: white;
     margin-left: 1em;
 }
