--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -29,7 +29,7 @@ img {
     color: #444444;
 }
 
-.projectLink {
+.link {
     display: flex;
     font-size: .9rem;
     background-color: rgb(0, 12, 116);
@@ -37,14 +37,18 @@ img {
     width: 40%;
     max-width: 200px;
     margin: 0 auto 2em;
+    padding: 1em;
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 35px;
     text-decoration: none;
     font-weight: bold;
     border-radius: 5px;
     text-transform: uppercase;
+}
+
+.githubLink {
+    background-color: black;
 }
 
 @media(min-width: 800px) {
