--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ffffff;
+  background-color: #080807;
   color: #444444;
   display: flex;
   flex-direction: column;
