--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -47,13 +47,14 @@
     padding: 0 1em;
 }
 
-h1 {
+.hero-container h1 {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 3.3rem;
     margin-left: .5em;
     margin-right: .5em;
+    color: #FFF266;
 }
 
 .hero-text h2 {
