--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -6,6 +6,9 @@
     align-items: center;
     color: black;
     font-weight: 300;
+    border: 1px solid red;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 
 .hero-img {
@@ -49,7 +52,7 @@
 .hero-container h1 {
     display: flex;
     justify-content: center;
-    font-size: 3.3rem;
+    font-size: 3rem;
     margin-left: .5em;
     margin-right: .5em;
     color: #FFF266;
