--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-items: center;
     color: black;
-    font-weight: 300;
     border: 1px solid red;
     margin-left: 2em;
     margin-right: 2em;
@@ -25,7 +24,6 @@
     flex-direction: column;
     width: 100%;
     font-family: 'Raleway', sans-serif;
-    font-weight: 300;
 }
 
 .hero-img-container p {
@@ -56,6 +54,7 @@
     margin-left: .5em;
     margin-right: .5em;
     color: #FFF266;
+    line-height: .9;
 }
 
 .hero-text h2 {
