--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -3,11 +3,10 @@
 .hero-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     color: black;
-    border: 1px solid red;
     margin-left: 2em;
     margin-right: 2em;
+    margin-top: 5.625em;
 }
 
 .hero-img {
@@ -40,18 +39,18 @@
 }
 
 .hero-text p {
-    font-size: 1.3rem;
+    margin-top: .5em;
+    font-size: 1rem;
     max-width: 450px;
-    line-height: 1.75em;
     margin-bottom: 1em;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 
 .hero-container h1 {
     display: flex;
     justify-content: center;
     font-size: 3rem;
-    margin-left: .5em;
-    margin-right: .5em;
     color: #FFF266;
     line-height: .9;
 }
@@ -71,8 +70,9 @@
 
 .icons {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
+    margin-top: 1em;
     margin-bottom: 4em;
 }
 
