adding margin-top to .projects

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,6 +10,7 @@
 .projects {
     font-size: .875rem;
     font-weight: 600;
+    margin-top: 5em;
     margin-bottom: 0.2em;
     color: #E5DE8A;
 }
