--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -5,9 +5,9 @@
 }
 
 img {
-    height: auto;
     width: 100%;
     max-width: 500px;
+    margin-top: 2.5em;
 }
 
 .showcase-container p {
@@ -29,21 +29,24 @@ img {
     width: 100%;
     border: 1px solid green;
     text-align: center;
+    margin-top: 2em;
 }
 
 .link {
     flex: 1 1 0px;
     font-size: .9rem;
     background-color: #FFF04D;
-    color: white;
+    color: black;
     text-decoration: none;
     font-weight: bold;
     text-transform: uppercase;
     text-align: center;
+    padding: 1.1em;
 }
 
 .githubLink {
-    background-color: black;
+    background-color: #1A1A1A;
+    color: white;
 }
 
 @media(min-width: 800px) {
