--- a/src/css/About.css
+++ b/src/css/About.css
@@ -7,14 +7,14 @@
 }
 
 .about-container h2 {
-    font-size: .875rem;
+    font-size: 1.2rem;
     font-weight: 600;
     margin-bottom: .7em;
     color: #E5DE8A;
 }
 
 .about-container p {
-    font-size: .875rem;
+    font-size: 1rem;
     font-weight: 500;
     line-height: 1.5;
 }
