--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,7 @@
 }
 
 .projects {
-    font-size: .875rem;
+    font-size: 1.2rem;
     font-weight: 600;
     margin-bottom: 0.2em;
     color: #E5DE8A;
