--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -36,7 +36,7 @@ img {
     flex: 1 1 0px;
     font-size: .9rem;
     font-weight: 900;
-    background-color: #FFF04D;
+    background-color: #FFEC1A;
     color: black;
     text-decoration: none;
     text-transform: uppercase;
