increase brightness of github link background

--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -46,7 +46,7 @@ img {
 }
 
 .githubLink {
-    background-color: #1A1A1A;
+    background-color: #262626;
     color: white;
     margin-right: 0;
     margin-left: 1.5em;
