--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,8 +1,5 @@
 .contact-container {
-    text-align: center;
-    height: 100vh;
-}
-
-.contact-container h2 {
     margin-top: 1em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
