--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -10,16 +10,14 @@
 }
 
 .hero-img {
-    margin-top: 25px;
-    margin-bottom: 0;
-    border: solid 2px black;
-    border-radius: 50%;
-    width: 50%;
-    max-width: 300px;
+    margin-bottom: 1em;
+    width: 100%;
+    border-radius: 0px;
+    border: 10px solid rgb(255, 255, 255);
 }
 
 .hero-img-container {
-    align-items: center;
+    display: flex;
     flex-direction: column;
     width: 100%;
     font-family: 'Raleway', sans-serif;
