--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -12,12 +12,13 @@
 .hero-img {
     margin-bottom: 1em;
     width: 100%;
-    border-radius: 0px;
+    max-width: 25rem;
     border: 10px solid rgb(255, 255, 255);
 }
 
 .hero-img-container {
     display: flex;
+    align-items: center;
     flex-direction: column;
     width: 100%;
     font-family: 'Raleway', sans-serif;
