--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -71,38 +71,45 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    max-width: 450px;
     margin-top: 1em;
 }
 
 @media (min-width: 1000px) {
     .hero-container {
         flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin: 4em;
+        margin: 10em;
     }
 
     .hero-img-container {
+        display: flex;
+        text-align: center;
         width: 50%;
     }
 
     .hero-img {
-        max-width: none;
-        max-width: 1000px;
+        max-width: 550px;
     }
 
     .hero-text {
+        text-align: left;
+        align-items: start;
         width: 50%;
     }
 
     .hero-text p {
-        font-size: 1.7rem;
-        padding: 0;
+        font-size: 2rem;
+        margin: 0;
+        max-width: none;
     }
 
-    h1 {
-        font-size: 5rem;
+    .hero-container h1 {
+        font-size: 5.5rem;
+        text-align: left;
+    }
+
+    .icons {
+        margin-top: 4em;
         padding: 0;
-        margin: 0;
     }
 }
