--- a/src/css/Showcase.css
+++ b/src/css/Showcase.css
@@ -4,10 +4,6 @@
     color: rgb(0, 0, 0);
 }
 
-.image-container {
-    height: 300px;
-}
-
 img {
     width: 100%;
     height: 100%;
@@ -59,6 +55,8 @@ img {
 
 @media(min-width: 800px) {
     .showcase-container {
-        width: 50%;
+        align-items: start;
+        width: 40%;
     }
+
 }
