--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -20,3 +20,15 @@
 .fa-linkedin {
     color: white;
 }
+
+.footer-container i:hover {
+    color: yellow;
+}
+
+@media (min-width: 1000px) {
+    .footer-container {
+        margin-left: auto;
+        margin-right: auto;
+        width: 25%;
+    }
+}
