--- a/src/css/Journey.css
+++ b/src/css/Journey.css
@@ -14,9 +14,39 @@
     margin-bottom: .4em;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 600px) {
+    .journey-container {
+        margin-left: 5em;
+        margin-right: 5em;
+    }
+}
+
+@media (min-width: 800px) {
     .journey-container {
         margin-left: 10em;
         margin-right: 10em;
+    }
+
+    .journey-container h2 {
+        font-size: 2rem;
+    }
+
+    .journey-container p {
+        font-size: 1.5rem;
+    }
+}
+
+@media (min-width: 1000px) {
+    .journey-container {
+        margin-left: 20em;
+        margin-right: 20em;
+    }
+
+    .journey-container h2 {
+        font-size: 2rem;
+    }
+
+    .journey-container p {
+        font-size: 1.5rem;
     }
 }
