--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -39,3 +39,10 @@ nav ul li:nth-child(2) {
         color: yellow;
     }
 }
+
+@media (min-width: 1000px) {
+    nav {
+        margin-left: 15em;
+        margin-right: 15em;
+    }
+}
