--- a/src/css/Journey.css
+++ b/src/css/Journey.css
@@ -8,11 +8,13 @@
 .journey-container h1 {
     margin-bottom: 1.2em;
     color: #E5DE8A;
+    text-transform: uppercase;
 }
 
 .journey-container h2 {
     margin-top: 1em;
     margin-bottom: .4em;
+    text-transform: uppercase;
 }
 
 @media (min-width: 600px) {
